Fix Issues with Empty Table directive
Empty table directive was broken including:

* was looking for empty-table instead of stg-empty-table
* no styles defined.  Also div was "selectable" and highlight from hover
was active.
* added example of empty table in index.html

--- a/src/less/scrolling-table.less
+++ b/src/less/scrolling-table.less
@@ -28,6 +28,19 @@
                 background-color: @color-table-selected-background;
             }
         }
+        .empty-msg {
+            div {
+                padding: 5px 10px;
+                font-size: @table-font-size;
+                font-style: italic;
+                &::selector {
+                    background: none;
+                } 
+            }
+            &:hover {
+                background-color: transparent;
+            }
+        }
     }
 
     .tableHeader {
